[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/themes/menu_theme.tres" type="Theme" id=2]
[ext_resource path="res://resources/fonts/title_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://scripts/ui/lobby.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.921569, 0.843137, 0.521569, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -51, 227 )
theme = ExtResource( 2 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
anchor_right = 0.25
anchor_bottom = 0.25
rect_scale = Vector2( 4, 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenteredTitleSection" type="CenterContainer" parent="Background"]
anchor_right = 1.0
margin_bottom = 26.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Background/CenteredTitleSection"]
margin_left = 84.0
margin_right = 172.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 3 )
text = "LOBBY"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="Background"]
anchor_right = 2.0
anchor_bottom = 2.0
margin_top = 28.0
margin_bottom = -28.0
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host" type="Tabs" parent="Background/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 23.0

[node name="Scaler" type="Control" parent="Background/TabContainer/Host"]
anchor_right = 0.5
anchor_bottom = 0.5
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostButton" type="Button" parent="Background/TabContainer/Host/Scaler" groups=["button"]]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -57.0
margin_top = -22.0
margin_right = 57.0
margin_bottom = -3.0
text = "Open Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IP" type="Label" parent="Background/TabContainer/Host/Scaler"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -77.5
margin_top = -34.5
margin_right = 77.5
margin_bottom = -21.5
text = "IP:[PRIVATE_IP]"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Tabs" parent="Background/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 23.0

[node name="Scaler" type="Control" parent="Background/TabContainer/Join"]
anchor_right = 0.5
anchor_bottom = 0.5
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPInput" type="LineEdit" parent="Background/TabContainer/Join/Scaler"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -31.25
margin_right = 70.0
margin_bottom = -8.25
align = 1
placeholder_text = "Host's IP address"
placeholder_alpha = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="join" type="Button" parent="Background/TabContainer/Join/Scaler" groups=["button"]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_right = 12.0
margin_bottom = 13.0
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InvalidIP" type="Label" parent="Background/TabContainer/Join/Scaler"]
visible = false
margin_left = 91.687
margin_top = 105.438
margin_right = 201.687
margin_bottom = 119.438
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Invalid IP Address"

[node name="StartButton" type="Button" parent="Background" groups=["button"]]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -69.75
margin_top = -22.0
margin_right = -9.75
margin_bottom = -3.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Background" groups=["button"]]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 22.25
margin_top = -18.5
margin_right = 49.25
margin_bottom = -5.5
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerListBackground" type="Panel" parent="."]
anchor_right = 0.318
anchor_bottom = 0.16
margin_left = 24.0
margin_top = 170.0
margin_right = 24.0
margin_bottom = 170.0
rect_scale = Vector2( 3, 3 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerListLeft" type="VBoxContainer" parent="PlayerListBackground"]
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 6.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="Label" parent="PlayerListBackground/PlayerListLeft"]
margin_right = 137.0
margin_bottom = 13.0
text = "1. Player 1"

[node name="Player2" type="Label" parent="PlayerListBackground/PlayerListLeft"]
margin_top = 17.0
margin_right = 137.0
margin_bottom = 30.0
text = "2. Player 2 (AI)"

[node name="Player3" type="Label" parent="PlayerListBackground/PlayerListLeft"]
margin_top = 34.0
margin_right = 137.0
margin_bottom = 47.0
text = "3. Player 3 (AI)"

[node name="Player4" type="Label" parent="PlayerListBackground/PlayerListLeft"]
margin_top = 51.0
margin_right = 137.0
margin_bottom = 64.0
text = "4. Player 4 (AI)"

[node name="Player5" type="Label" parent="PlayerListBackground/PlayerListLeft"]
margin_top = 68.0
margin_right = 137.0
margin_bottom = 81.0
text = "5. Player 5 (AI)"

[node name="PlayerListRight" type="VBoxContainer" parent="PlayerListBackground"]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 6.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player6" type="Label" parent="PlayerListBackground/PlayerListRight"]
margin_right = 137.0
margin_bottom = 13.0
text = "6. Player 6 (AI)"

[node name="Player7" type="Label" parent="PlayerListBackground/PlayerListRight"]
margin_top = 17.0
margin_right = 137.0
margin_bottom = 30.0
text = "7. Player 7 (AI)"

[node name="Player8" type="Label" parent="PlayerListBackground/PlayerListRight"]
margin_top = 34.0
margin_right = 137.0
margin_bottom = 47.0
text = "8. Player 8 (AI)"

[node name="Player9" type="Label" parent="PlayerListBackground/PlayerListRight"]
margin_top = 51.0
margin_right = 137.0
margin_bottom = 64.0
text = "9. Player 9 (AI)"

[node name="Player10" type="Label" parent="PlayerListBackground/PlayerListRight"]
margin_top = 68.0
margin_right = 137.0
margin_bottom = 81.0
text = "10. Player 10 (AI)"

[node name="Connecting" type="Panel" parent="."]
visible = false
anchor_right = 0.25
anchor_bottom = 0.25
rect_scale = Vector2( 4, 4 )

[node name="Label" type="Label" parent="Connecting"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "[Connecting Text]"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="tab_changed" from="Background/TabContainer" to="." method="_on_TabContainer_tab_changed"]
[connection signal="pressed" from="Background/TabContainer/Host/Scaler/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="Background/TabContainer/Join/Scaler/join" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="Background/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Background/Back" to="." method="_on_Back_pressed"]
